mythtv (2:0.24.0+fixes.20110208.6318d52-0ubuntu1) UNRELEASED; urgency=low

  * New upstream checkout (6318d52)
  * >>Upstream changes since last upload (6dd5e4b):
  * [6318d52] Replace 'xml' version check with one that checks Python
    version, for Python 2.7 compatibility. (LP: #711762)

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 08 Feb 2011 10:50:52 -0600

mythtv (2:0.24.0+fixes.20110207.6dd5e4b-0ubuntu1) natty; urgency=low

  * Install mythffmpeg and mythffplay in mythtv-common.
  * While grabbing git source, capture the details of 'git describe'
    for --version output.
  * debian/control:
    - drop openchrome build dependencies.  We no longer support XvMC in
    Ubuntu builds anyway.
  * Add a depends on python-lxml (LP: #710709)
  * New upstream checkout (6dd5e4b)
  * >>Upstream changes since last upload (1405782):
  * [6dd5e4b] Display the Auto commercial skip option for in-progress
    recordings. (cherry picked from commit
    5d94418d0813cf3c6dfb5d29b7fe594c155fb3be)
  * [1a69c92] Several changes to fix the current position and duration
    of the playback OSD  * Start using the currently displayed video
    timecode for the OSD position instead of frame number and total
    frames which is inaccurate.  * Use FFmpeg duration for pre-recorded
    and video playback length. LiveTV is already correct since it uses
    the actual recording times but in-progress recordings still uses
    frames written and fps which is obviously wrong for variable
    framerate and repeat frame material. The problem with in-progress
    duration should be able to be fixed by using recording times like
    livetv does. An update to mythplayer and the recorder class will be
    necessary.  * Refactor and clean-up some timestamp/timecode
    handling.
  * [08a8a65] Force reload of context and stream properties when
    switching between LiveTV segments.
  * [849b5ca] Fix seeking after LiveTV transitions.